# neovim_setting

./: .editorconfig  .gitignore  .vimspector.json  README.md  coc-package.json  coc-settings.json  cspell.config.yaml  go.mod  go.sum  init.lua  init.vim  package-lock.json  package.json  pnpm-lock.yaml
autoload/: command.vim  common.vim  config.vim  filetype.vim  keymap.vim
autoload/langages/: go.vim  haskell.vim  ruby.vim
autoload/plugins/: auto_ctags.vim  deoplete.vim  deoplete_go.vim  deoplete_ternjs.vim  emmet_vim.vim  gitgutter.vim  haskell_vim.vim  lightline.vim  neosnippet.vim  tagbar.vim  unite.vim  vim_go.vim  vim_indent_guides.vim  vim_markdown.vim  vim_monster.vim  vim_quickrun.vim  (+4 more)
dein/: dein.toml  dein_lazy.toml
dict/: go.dict  proto.dict  rust.dict
ftdetect/: csv.vim  dockerfile.vim  javascript.vim  json.vim  sql.vim
ftplugin/: csv.vim  go.vim  haskell.vim  java.vim  javascript.vim  make.vim  markdown.vim  proto.vim  python.vim  ruby.vim  rust.vim  typescript.vim  yacc.vim  yaml.vim
lua/: base.lua  colorscheme.lua  command.lua  keymap.lua  plugins.lua
plugin/: command.vim  keymap.vim
script/: initialize.sh  install.sh  install_linters.sh  install_lsp.sh  install_tools.sh  update.sh  versions.sh
scripts/: init_haskell.sh  setup.sh
snippets/: dart.snip  go.snip  java.snip  javascript.snip  make.snippets  proto.snip  ruby.snip  rust.snip  sh.snip  typescript.snip
syntax/: dart.vim  go.lua  go.vim  typescript.vim
tmp/: .gitignore  README.md
tmp/examples/python/: main.py  pyproject.toml
tools/: tools.go
ultisnips/: rust.snippets
(+115 files in other folders)
